fixed menu overflow issue

--- a/W02/styles/temples.css
+++ b/W02/styles/temples.css
@@ -66,13 +66,14 @@ nav{
     top: 0;
     left: 0;
     height: 100%;
-    width: 60%;
+    width: 60vw;
     background-color: #4b0082;
     flex-direction: column;
     align-items: flex-start;
     padding: 2rem 1rem;
     z-index: 1000;
     box-shadow: 2px 0 10px rgba(0, 0, 0, 0.2);
+    overflow-x: hidden;
   }
 .navigation li{
     margin:0.5rem 0;
